--- a/index.html
+++ b/index.html
@@ -10,9 +10,29 @@
   <body>
     <div class="header">
       <b>Header Logo</b>
+      <ul class ="right-links">
+      <li><a href="#">header link one</a></li>
+      <li><a href="#">header link two</a></li>
+      <li><a href="#">header link three</a></li>
+    </ul>
     </div>
     <div class="section1">
-      This website is awesome
+      <div class="left-hero">
+        <div class="main-text">
+          This website is awesome
+        </div>
+        <div class="secondary-text">
+          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+        </div>
+        <button>
+          Sign up
+        </button>
+      </div>
+
+      <div class="image-placeholder">
+        this is a placeholder for an image
+      </div>
+      
       
     </div>
     <div class="section2">
