call to action box

--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
     </div>
 
     <div class="section4">
-      Call to action box
+
+        <div class="call-to-action-box">
+
+            <div class="left">
+              <p style="font-size: 24px; font-weight: 900;">Call to action it's time</p>
+              <p>Sign up for our product by clicking that ubtton right over there!</p>
+            </div>
+
+          <button id="actionButton"> Sign up</button>
+        </div>
+
       
     </div>
     
