--- a/index.html
+++ b/index.html
@@ -37,8 +37,28 @@
     </div>
     <div class="section2">
       Some random info
+      <div class="picture-container">
+        <div class="picture">
+          <div class="empty-box"></div>
+          this is some subtext under an illustration or image.
+        </div>
+        <div class="picture">
+          <div class="empty-box"></div>
+          this is some subtext under an illustration or image.
+        </div>
+        <div class="picture">
+          <div class="empty-box"></div>
+          this is some subtext under an illustration or image.
+        </div>
+        <div class="picture">
+          <div class="empty-box"></div>
+          this is some subtext under an illustration or image.
+        </div>
+      </div>
+
+      </div>
       
-    </div>
+
 
     <div class="section3">
       <p>This is an inspiring quote, or a testimonial, from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice. </p>
