fix big gap in call to action section

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <div class="call-to-action-box">
 
       <div class="left">
-        <p style="font-size: 24px; font-weight: 900;">Call to action it's time</p>
-        <p>Sign up for our product by clicking that ubtton right over there!</p>
+        <p style="font-size: 1.5em; font-weight: bold; margin: 0;">Call to action it's time</p>
+        <p style="margin: 0">Sign up for our product by clicking that ubtton right over there!</p>
       </div>
 
       <button id="actionButton"> Sign up</button>
